# broccoli

.github/workflows/: ci.yml
infrastructure/: compose.yaml
server/: .gitignore  Cargo.toml  build.gradle.kts  gradle.properties
server/gradle/wrapper/: gradle-wrapper.properties
server/src/: main.rs  recipes.rs
server/src/main/kotlin/ch/ntruessel/broccoli/server/: BroccoliServer.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/application/: EventStore.kt  RecipeCommands.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/domain/: Event.kt  Events.kt  Ids.kt  Ingredient.kt  Recipe.kt  RecipeEvents.kt  Tag.kt  Yield.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/domain/writemodel/: Recipe.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/infrastructure/: Error.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/infrastructure/eventbus/: EventMapper.kt  EventStore.kt  JdbcEventStore.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/infrastructure/readmodel/: RecipeView.kt  RecipeViewRepository.kt
server/src/main/kotlin/ch/ntruessel/broccoli/server/infrastructure/rest/: RecipeController.kt  Router.kt
server/src/main/resources/: application.properties  application.yml
server/src/main/resources/db/migrations/: 01-db-init.sql  changelog.yml
server/src/test/kotlin/ch/ntruessel/broccoli/server/infrastructure/eventbus/: EventStoreTest.kt
web/: package.json
web/public/: manifest.json
web/src/: App.tsx  index.tsx
web/src/pages/: CreateRecipe.tsx  RecipeOverview.tsx
web/src/ui/: App.tsx  RecipeList.tsx
(+1 files in other folders)
