[package]
name = "broccoli-server"
version = "0.1.0"
authors = ["Nicolas Truessel <nicolas+git@ntruessel.ch>"]
edition = "2018"
publish = false

[dependencies]
actix-web = "3.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4", features = ["runtime-actix-native-tls", "postgres", "migrate"] }
